# Interview-Lens

./: .gitignore  README.md  flaskSpeechLiveData.py  flaskTest.html  liveData.py
backend/: awsrekognition.py  integrated.py  main.py  pyproject.toml  speechLiveData.py  streamlitNicer.py  test_audio_analysis_ben.ipynb  test_audio_analysis_sahil.py  test_client.py
frontend/: package-lock.json  package.json
frontend/app/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  wxt.config.ts
frontend/app/assets/: style.css
frontend/app/entrypoints/background/: AudioCapture.ts  SpeechMetrics.ts  TranscriptionHandler.ts  backgroundindex.ts
frontend/app/entrypoints/content/: contentindex.ts
frontend/app/entrypoints/popup/: App.css  App.tsx  SpeechVisualizer.tsx  index.html  main.tsx
