[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ben Juntilla <ben@benjuntilla.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
SoundCard = "^0.4.3"
fastapi = {extras = ["standard"], version = "^0.115.4"}
amazon-transcribe = "^0.6.2"
websockets = "^14.0"
PyAudio = "^0.2.14"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
